--- a/index.html
+++ b/index.html
@@ -10,9 +10,29 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main3.css" />
-	</head>
-	<body class="is-preload">
+		<script type = "text/javascript">
+          function displayNextImage() {
+              x = (x === images.length - 1) ? 0 : x + 1;
+              document.getElementById("img").src = images[x];
+          }
 
+          function displayPreviousImage() {
+              x = (x <= 0) ? images.length - 1 : x - 1;
+              document.getElementById("img").src = images[x];
+          }
+          
+          function startTimer() {
+              setInterval(displayNextImage, 4500);
+          }
+
+          var images = [], x = -1;
+          images[0] = "images/laketrout.jpg";
+          images[1] = "images/lt_eggs.jpg";
+          images[2] = "images/winter.jpg";
+      </script>
+	</head>
+	
+	<body class="is-preload">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -33,8 +53,14 @@
 
 				<!-- Main -->
 					<section id="main">
-						<header>
-							<span class="avatar"><img src="images/headshot.png" alt="" /></span>
+					  <header>
+							<span class="avatar">
+							<body onload = "startTimer()">
+							  <img id="img" src="images/headshot.png" width="300" height="300">
+							  <button type="button" onclick="displayPreviousImage()"><</button>
+							  <button type="button" onclick="displayNextImage()">></button>
+							</body>
+							</span>
 							<h1>Matthew H. Futia</h1>
 							<p>Aquatic ecology for conservation and restoration</p>
 						</header>
@@ -89,7 +115,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Matthew H. Futia</li>
+							<li>&copy; Matthew Futia</li>
 						</ul>
 					</footer>
 
