--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Matthew H. Futia</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main3.css" />
+		<link rel="stylesheet" href="assets/css/main4.css" />
 		<script type = "text/javascript">
           function displayNextImage() {
               x = (x === images.length - 1) ? 0 : x + 1;
@@ -39,6 +39,7 @@
           text-align: center;
           transition-duration: 0.3s;
           border-radius: 50%;
+          border-color: transparent;
         }
         
         .button:hover{
@@ -79,6 +80,7 @@
 							</body>
 							</span>
 							<h1>Matthew H. Futia</h1>
+							<h2>University of Vermont</h2>
 							<img id="img" src="Gallery/headshot.png" width="150" height="150">
 							<p>Aquatic ecology for conservation and restoration</p>
 						</header>
@@ -132,7 +134,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Matthew Futia</li>
+							<li>&copy; Matthew H. Futia</li>
 						</ul>
 					</footer>
 
