--- a/CV.html
+++ b/CV.html
@@ -5,7 +5,7 @@
 		<title>Matthew H. Futia CV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main_csv.css" />
+		<link rel="stylesheet" href="assets/css/secondary.css" />
 		
 		<style type="text/css">
 		h1 {font-size: 34px;
