--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       transition-duration: 0.3s;
       border-radius: 50%;
       border-color: transparent;
+      height: 1.5em;
+      line-height: 10px;
     }
     
     .button:hover{
       background-color: #e5f5f9;
       color: black;
-      border: #252525;
+      border: #ffffff;
+      height: 1.5em;
+      line-height: 10px;
     }
     
     p.normal {
@@ -86,11 +90,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
   <section id="main">
     <body onload = "startTimer()">
       <span class="avatar">
-        <img id="img" src="Gallery/winter.jpg" width="325" height="325">
+        <img id="img" src="Gallery/winter.jpg" width="300" height="300">
         <button class="button button" onclick="displayPreviousImage()"><</button>
         <button class="button button" onclick="displayNextImage()">></button>
       </span>
       <h1> <p class = "thicker">Matthew H. Futia</p> </h1>
+      <h2> <p class = "thick">PhD Candidate</p> </h2>
       <h2> <p class = "thick">University of Vermont</p> </h2>
       <img id="img" src="Gallery/headshot.png" width="150" height="150">
       <h3> <p class="thick"> Aquatic ecology for conservation and restoration</p> </h3>
