--- a/Gallery.html
+++ b/Gallery.html
@@ -59,6 +59,7 @@
 		  color: black;
 		  font-size: 24px;
 		  padding: 0 10 0 10;
+		  margin-right: 20px;
 		}
 		
 /* Closable button inside the expanded image */
