updates to pics

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     images[0] = "Gallery/headshot.jpg";
     images[1] = "Gallery/diving_entry_main.jpg";
     images[2] = "Gallery/eyed_eggs_ms_main.jpg";
-    images[3] = "Gallery/rov_laketrout_main.jpg";
+    images[3] = "Gallery/rov_laketrout_main.JPG";
     images[4] = "Gallery/winterwork_main.jpg";
     
     if ('addEventListener' in window) {
