correct image view

--- a/Gallery.html
+++ b/Gallery.html
@@ -21,8 +21,8 @@
 		.column {
 		  float: left;
 		  width: 25%;
-		  padding: 10px;
-		  bottom: 10px;
+		  padding: 1%;
+		  bottom: 1%;
 		}
 		
 /* Style the images inside the grid */
@@ -64,20 +64,20 @@
 /* The expanding image container */
     .container {
       top: 15%;
-      left: 30%;
+      left: 25%;
       position: fixed;
       display: none;
-      width: 40%;
+      width: 50%;
     }
 		
 /* Expanding image text */
 		#imgtext {
 		  position: absolute;
-		  bottom: -30px;
+		  top: 95%;
 		  width: 100%;
 		  background-color: #eceef4;
 		  color: black;
-		  font-size: 20px;
+		  font-size: 100%;
 		  padding-left: 2.5%;
 		  padding-right: 2.5%;
 		}
@@ -183,7 +183,7 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/diving_entry.jpg" alt="Rolling off the back of the R/V Melosira for SCUBA diving" style="width:100%" onclick="myFunction(this);">
+          <img src="Gallery/diving_entry.jpg" alt="Rolling off the back of the R/V Melosira for scuba surveys" style="width:100%" onclick="myFunction(this);">
         </div>
 
         <div class="column">
@@ -207,7 +207,7 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/wintergillnet.JPG" alt="Pulling in a gill net through the ice" style="width:100%" onclick="myFunction(this);">
+          <img src="Gallery/wintergillnet.JPG" alt="Pulling in a gillnet through the ice" style="width:100%" onclick="myFunction(this);">
         </div>
 
         <div class="column">
