lkt release video

--- a/Gallery.html
+++ b/Gallery.html
@@ -165,7 +165,7 @@
 
         <div class="column">
           <video width="100%" controls>
-            <source src="Gallery/lt_release.mp4" type="video/mp4">
+            <source src="Gallery/lkt_release.mp4" type="video/mp4">
           </video>
           <div class="hide"><p>Lake trout released after tagging</p></div>
         </div>
