updates to media screen size

--- a/Gallery.html
+++ b/Gallery.html
@@ -133,7 +133,7 @@
 <!-- Main -->    
     <section id="main">
       <div style="text-align:center">
-        <h1>Field Work Photos</h1>
+        <h1>Research Photos</h1>
       </div>
       
       <div>
