--- a/About.html
+++ b/About.html
@@ -64,7 +64,7 @@
 <section id="main">
   <main>
     <div class="doc">
-      <h1>my story:</h1>
+      <h1>My Story</h1>
       <hr> 
         <div>
           <img src="Gallery/matt_lt.jpg" style="width:50%; opacity:1">
