--- a/Research.html
+++ b/Research.html
@@ -64,7 +64,7 @@
 <section id="main">
   <main>
     <div class="doc">
-      <h1>Research:</h1>
+      <h1>Research</h1>
       <hr> 
         <div>
           <img src="Gallery/winterwork.jpg" style="width:50%; opacity:1">
