--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,7 @@
 		
     .doc{background-color: #f5f5f5;
     width: 100%;
-    padding: 10%;
+    padding: 5% 10% 5% 10%;
     margin: 20px;
     } 
     
@@ -75,10 +75,10 @@
   <main>
     <div class="doc">
       <div class="cntr">
-        <h1>CURRICULUM VITAE</h1>
-        <h2>Matthew H. Futia</2>
-        <h3>Ph.D. Candidate, Department of Biology, University of Vermont</h3>
-        <h3><a href="https://www.uvm.edu/rsenr/rubensteinlab" style="color:#4068bd">Rubenstein Ecosystem Science Laboratory</a>, 3 College Street, Burlington, VT 05401</h3>
+        <h1>Curriculum Vitae</h1>
+        <h2>Matthew H. Futia</h2>
+        <h5>Ph.D. Candidate, Department of Biology, University of Vermont</h5>
+        <h5><a href="https://www.uvm.edu/rsenr/rubensteinlab" style="color:#4068bd">Rubenstein Ecosystem Science Laboratory</a>, 3 College Street, Burlington, VT 05401</h5>
         <a href="mailto:mfutia@uvm.edu" style="color:#4068bd"><p>E: mfutia@uvm.edu</p></a>
       </div>
         
