--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
     
     img{
       float: right;
-      padding: 0 0 0 30px;
+      padding: 0 0 0 3%;
     }
     
     </style>
@@ -57,7 +57,14 @@
     </nav>
   </header>
 
-  
+<!-- Footer -->
+  <footer id="footer">
+    <nav class="copyright">
+      <ul>
+        <li><h6 class="thick">&copy; Matthew H. Futia</h6></li>
+      </ul>
+    </div>
+  </footer>
 
  
   <!-- Main -->
@@ -98,12 +105,3 @@
     </div>
   </main>
 </section>
-
-<!-- Footer -->
-  <footer id="footer">
-    <nav class="copyright">
-      <ul>
-        <li><h6 class="thick">&copy; Matthew H. Futia</h6></li>
-      </ul>
-    </div>
-  </footer>
