--- a/CV.html
+++ b/CV.html
@@ -75,10 +75,11 @@
   <main>
     <div class="doc">
       <div class="cntr">
-        <h1>Curriculum Vitae</h1>
+        <h1><em>Curriculum Vitae</em></h1>
         <h2>Matthew H. Futia</h2>
         <h5>Ph.D. Candidate, Department of Biology, University of Vermont</h5>
-        <h5><a href="https://www.uvm.edu/rsenr/rubensteinlab" style="color:#4068bd">Rubenstein Ecosystem Science Laboratory</a>, 3 College Street, Burlington, VT 05401</h5>
+        <h5><a href="https://www.uvm.edu/rsenr/rubensteinlab" style="color:#4068bd">Rubenstein Ecosystem Science Laboratory</a></h5>
+        <h5>3 College Street, Burlington, VT 05401</h5>
         <a href="mailto:mfutia@uvm.edu" style="color:#4068bd"><p>E: mfutia@uvm.edu</p></a>
       </div>
         
