--- a/Gallery.html
+++ b/Gallery.html
@@ -87,7 +87,7 @@
 		  position: absolute;
 		  top: 10px;
 		  right: 15px;
-		  color: black;
+		  color: gray;
 		  width: 30px;
 		  height: 30px;
 		  background-color: rgba(0,0,0,0.5);
@@ -124,7 +124,7 @@
           <li><h4><a href="CV.html">CV</a></h4></li>
           <li><h4><a href="Research.html">Research</a></h4></li>
           <li><h4><a href="Pubs.html">Publications</a></h4></li>
-          <li><h1><a href="Gallery.html">Gallery</a></h1></li>
+          <li><h3><a href="Gallery.html">Gallery</a></h3></li>
         </ul>
       </nav>
     </header>
@@ -155,7 +155,7 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/sunrise.jpg" alt="Fiery sunrise ove Lake Champlain" style="width:100%" onclick="myFunction(this);">
+          <img src="Gallery/sunrise.jpg" alt="Fiery sunrise over Lake Champlain" style="width:100%" onclick="myFunction(this);">
         </div>
 
         <div class="column">
