--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
     </script>
     
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EBVFW8KYTX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      
+      gtag('config', 'G-EBVFW8KYTX');
+    </script>
+
+<!-- Page formatting -->    
     <style>
 
     body {
