--- a/Gallery.html
+++ b/Gallery.html
@@ -374,6 +374,7 @@
       var expandImg = document.getElementById("expandedImg");
       var imgText = document.getElementById("imgtext");
       expandImg.src = imgs.src;
+   /* expandImg.src = imgs.getAttribute("data-fullsize");   for creating thumbnails  */
       imgText.innerHTML = imgs.alt;
       expandImg.parentElement.style.display = "block";
     }
