edits to photos

--- a/Gallery.html
+++ b/Gallery.html
@@ -311,7 +311,7 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/thumbs/chinook_salmon_thumb.jpg" alt="Size comparison of two spawning male Chinook salmon" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/chinook_salmon1.jpg">
+          <img src="Gallery/thumbs/chinook_salmon_thumb.jpg" alt="Size comparison of two spawning male Chinook salmon" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/chinook_salmon.jpg">
         </div>
         
         <div class="column">
@@ -323,7 +323,7 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/thumbs/lamprey_thumb.jpg" alt="Headshot of a sea lamprey" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/lamprey.jpg">
+          <img src="Gallery/thumbs/lamprey_thumb.jpg" alt="Headshot of a sea lamprey" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/lamprey1.jpg">
         </div>
 
         <div class="column">
