--- a/About.html
+++ b/About.html
@@ -81,7 +81,7 @@
       
       <h2>How my passion for wildlife began</h2>
       <div>
-        <img src="Gallery/childhood.jpg" style="width:50%">
+        <img src="Gallery/childhood.png" style="width:50%">
       </div>
       <p>I was fortunate growing up and was exposed to nature from a young age. I lived in a suburb of Albany NY on a dead end road with a wetland at the end. We would get all sorts of wildlife in our backyard and I can vivdly remember my parents helping my brother and me catch tadpoles that we raised until they popped out legs and we let them go. We also had family friends with a plot of land where I've spent many long winter hours sitting in the woods hunting and watching the wildlife wake up. I was also frequently around water, spending many summer days on Lake George and Saratoga Lake where I was either splashing in the water or had a fishing line in it. My favorite place to go though, was the ocean. Maybe it was the thrill of being on vacation, but I could spend hours walking along the shoreline searching for any signs of life, never knowing what creatures I might stumble upon. Regardless of the habitat, I've always appreciated the natural resources that surround us and am always ready to explore and learn more.</p>
 
