--- a/Gallery.html
+++ b/Gallery.html
@@ -73,11 +73,14 @@
 		
 /* The expanding image container */
     .container {
-      top: 15%;
+      top: 0;
       position: fixed;
       display: none;
       width: 100%;
       text-align: center;
+      background: #0009;
+      height: 100%;
+      padding-top: 10vh;
     }
 		
 /* Sub-container for full images*/
@@ -359,9 +362,9 @@
 
     </section>
 
-    <div class="container">
+    <div class="container" onclick="this.style.display='none'">
       <div class="subcontainer">
-        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+        <span onclick="this.parentElement.parentElement.style.display='none'" class="closebtn">&times;</span>
         <img id="expandedImg" style="width:100%; max-height:80vh;">
         <div id="imgtext"></div>        
       </div>
