main page text formatting

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       </div>
 
       <div>
-        <h2> Aquatic Ecology for Conservation & Restoration</h2>
+        <h2> Aquatic Ecology for Conservation&nbsp;&amp;&nbsp;Restoration</h2>
       </div>
 
       <div>
-        <h2 >PhD Candidate - University of Vermont</h2>
+        <h2 >PhD Candidate - University&nbsp;of&nbsp;Vermont</h2>
       </div>
     
       <div class="avatar">
