update to main page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       </div>
 
       <div>
-        <h2 >PhD Candidate - University&nbsp;of&nbsp;Vermont</h2>
+        <h2 >Post-doctoral Researcher - University&nbsp;of&nbsp;Vermont</h2>
       </div>
     
       <div class="avatar">
@@ -113,9 +113,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <footer id="footer">
       <div class="a">
         <ul class="icons">
-          <li><a href="https://twitter.com/matt_futia" class="icon brands fa-twitter">Twitter</a></li>
-          <li><a href="https://github.com/mfutia" class="icon brands fa-github">github</a></li>
-          <li><a href="mailto: mfutia@uvm.edu" class="fa-envelope">Email</a></li>
+          <li><a href="https://x.com/matt_futia" class="icon brands fa-twitter"></a></li>
+          <li><a href="https://github.com/mfutia" class="icon brands fa-github"></a></li>
+          <li><a href="mailto: mfutia@uvm.edu" class="fa-envelope"></a></li>
         </ul>
       </div>
       
