--- a/CV.html
+++ b/CV.html
@@ -83,7 +83,7 @@
         </div>
         
         <div>
-          <h5>Ph.D. Candidate, Department of Biology, University of Vermont</h5>
+          <h5>Postdoctoral Researcher</h5>
         </div>
         
         <div>
@@ -165,7 +165,7 @@
             <tbody>
               <tr>
                 <th><p>2024 – Present</p></th>
-                <th><p>Post-doctoral Researcher: Rubenstein Ecosystem Science Laboratory – University of Vermont</p></th>
+                <th><p>Postdoctoral Researcher: Rubenstein Ecosystem Science Laboratory – University of Vermont</p></th>
               </tr>
               <tr>
                 <th><p>2019 – 2024</p></th>
