update gallery file paths

--- a/Gallery.html
+++ b/Gallery.html
@@ -178,15 +178,15 @@
         </div>
 
         <div class="column">
-          <img src="Gallery/thumbs/verticalgillnets_bluemesa_thumb.jpg" alt="Vertical gillnets set on Blue Mesa Reservoir, CO" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/verticalgillnets_bluemesa.jpg">
+          <img src="Gallery/thumbs/verticalnets_bluemesa_thumb.jpg" alt="Vertical gillnets set on Blue Mesa Reservoir, CO" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/verticalnets_bluemesa.jpg">
         </div>
 
         <div class="column">
-          <img src="Gallery/thumbs/winter_diving_thumb.jpg" alt="Winter diving in Lake Champlain" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/winter_diving.jpg">
+          <img src="Gallery/thumbs/winter_diving_thumb.jpeg" alt="Winter diving in Lake Champlain" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/winter_diving.jpeg">
         </div>
         
         <div class="column">
-          <img src="Gallery/thumbs/seeding_canister_thumb.jpg" alt="Seeding Atlantic salmon eggs in field incubator" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/seeding_canister.jpg">
+          <img src="Gallery/thumbs/seeding_canister_thumb.jpeg" alt="Seeding Atlantic salmon eggs in field incubator" style="width:100%" onclick="myFunction(this);" data-fullsize="Gallery/seeding_canister.jpeg">
         </div>
 
         <div class="column">
