--- a/Pubs.html
+++ b/Pubs.html
@@ -85,7 +85,7 @@
         <p class="hangingindent">11. <b>Futia, M.H.</b>, Rinchard, J., and Marsden, J.E. 2025. Diet patterns differ between naturally- and hatchery-produced lake trout across life stages. Journal of Great Lakes Research, 102570. <a href="https://doi.org/10.1016/j.jglr.2025.102570" style="color:#4068bd"> DOI: 10.1016/j.jglr.2025.102570</a></p>
         <p class="hangingindent">10. Draugelis, L.A., <b>Futia, M.H.</b>, Marcy-Quay, B., Limburg, K., and Marsden, J.E. 2025. Tourists or residents? Origins of rainbow smelt morphotypes in Lake Champlain, VT. Transactions of the American Fisheries Society, 00: 1-9. <a href="https://doi.org/10.1093/tafafs/vnaf011" style="color:#4068bd">DOI: 10.1093/tafafs/vnaf011</a></p>
         <p class="hangingindent">9. <b>Futia, M.H.</b>, Binder, T.R., Henderson, M., and Marsden, J.E. 2024. Modeling regional occupancy of fishes using acoustic telemetry: a model comparison framework applied to lake trout. Animal Biotelemetry 12:25. <a href="https://doi.org/10.1186/s40317-024-00380-3" style="color:#4068bd">DOI: 10.1186/s40317-024-00380-3</a></p>
-          <p class="hangingindent">8. <b>Futia, M.H.</b>, Lantry, B.F., Lantry, J.R., Gorski, D., Johnson, T.B., Fisk, A.T., Colborne, S.F., and Rinchard, J. 2021. Comparisons among three diet analyses demonstrate multiple patterns in the estimated adult diet of a freshwater piscivore, <em>Salvelinus namaycush</em>. Ecological Indicators 127:107728. <a href="https://doi.org/10.1016/j.ecolind.2021.107728" style="color:#4068bd">DOI: 10.1016/j.ecolind.2021.107728</a></p>
+          <p class="hangingindent">8. <b>Futia, M.H.</b>, Lantry, B.F., Lantry, J.R., Gorsky, D., Johnson, T.B., Fisk, A.T., Colborne, S.F., and Rinchard, J. 2021. Comparisons among three diet analyses demonstrate multiple patterns in the estimated adult diet of a freshwater piscivore, <em>Salvelinus namaycush</em>. Ecological Indicators 127:107728. <a href="https://doi.org/10.1016/j.ecolind.2021.107728" style="color:#4068bd">DOI: 10.1016/j.ecolind.2021.107728</a></p>
         <p class="hangingindent">7. Marsden, J.E., Blanchfield, P.J., Brooks, J.L., Fernandes, T., Fisk, A.T., <b>Futia, M.H.</b>, Hlina, B.L., Ivanova, S.V., Johnson, T.B., Klinard, N.V., Krueger, C.C., Larocque, S.M., Matley, J.K., McMeans, B., O’Connor, L.M., Raby, G.D., and Cooke, S.J. 2021. Using untapped telemetry data to explore the winter biology of freshwater fish. Reviews in Fish Biology and Fisheries. <a href="https://doi.org/10.1007/s11160-021-09634-2" style="color:#4068bd">DOI: 10.1007/s11160-021-09634-2</a></p>
         <p class="hangingindent">6. Ladago, B.J., <b>Futia, M.H.</b>, Ardren, W., Honeyfield, D.C., Kelsey, K., Kozel, C., Riley, S.C., Rinchard, J., Tillitt, D.E., Zajicek, J.L., and Marsden, J.E. 2020. Thiamine concentrations of salmonine eggs during 14 years following the invasion of alewife in Lake Champlain. Journal of Great Lakes Research 46: 1340-1348. <a href="https://doi.org/10.1016/j.jglr.2020.06.018" style="color:#4068bd">DOI: 10.1016/j.jglr.2020.06.018</a></p>
         <p class="hangingindent">5. <b>Futia, M.H.</b>, Connerton, M.C., Weidel, B.W., and Rinchard, J. 2019. Relationships between fatty acid and thiamine concentrations of Lake Ontario Salmonines. Journal of Great Lakes Research. Journal of Great Lakes Research 45(5): 936-950. <a href="https://doi.org/10.1016/j.jglr.2019.08.005" style="color:#4068bd">DOI: 10.1016/j.jglr.2019.08.005</a></p>
@@ -103,12 +103,15 @@
         </div>
       
 
-<!--
+
         <div>
-           <h3>PUBLICATIONS in REVIEW </h3>
+           <h5><i>Publications in Review</i></h5>
+           <p class="hangingindent"><b>Futia, M.H.</b>, Galinat, A., Izzo, L. K., Simard, L. and Marsden, J.E. <em>In Review</em>. Multi-species interactions with artificial causeways in a fragmented lake. Target Journal: Canadian Journal of Fisheries and Aquatic Sciences.</p>
+           <p class="hangingindent"><b>Futia, M.H.</b>, Baker, J.B., Marcy-Quay, B., Blaker, P., and Marsden, J.E. <em>In Review</em>. Assessment of Differences in Performance of Two Lake Trout Stocking Strategies in Lake Champlain Using Lipid Analysis. Target Journal: Journal of Great Lakes Research.</p>
+           <p class="hangingindent">Osborne, C., <b>Futia, M.H.</b>, Connerton, M., Fisk, A., Gorsky, D., Heisey, A., Johnson, T., Lantry, B., and Rinchard, J. <em>In Review</em>. A Comparison of Diet and Egg Thiamine Concentrations Between Four Hatchery-Strains and Two Morphotypes of Lake Trout (<em>Salvelinus namaycush</em>) in Lake Ontario. Target Journal: Journal of Great Lakes Research.</p>
         </div>
--->
-        
+
+
         <div>
           <h5><i>Non-reviewed Publications</i></h5>
           <p class="hangingindent">Rinchard, J., <b>Futia, M.</b>, Marsden, E., Sanudo-Wilhelmy, S. 2021. Quantification of thiamin in natural fresh water. Final report – Great Lakes Fishery Commission.</p>
